--- a/BackJoonOnlineJudge/BackJoonOnlineJudge/BackJoonOnlineJudge.vcxproj.filters
+++ b/BackJoonOnlineJudge/BackJoonOnlineJudge/BackJoonOnlineJudge.vcxproj.filters
@@ -156,5 +156,11 @@
     <ClCompile Include="2751.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2108.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1427.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
